planning_tests/scheduling_planning/jobshop/invalid_problems/invalid_problem_3_2.jsp
nb_jobs nb_machines optimal
4 4 43 0
Times
8 5 10 10
5 4 8 9
9 3 5 4
3 3 9 10
Machines
2 3 1 4
3 4 1 2
3 2 1 4
2 4 1 3
Starts
16 25 34 39 
1 7 26 34 
3 11 16 26 
0 3 6 25 